--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,3 +11,48 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
 }
+html {
+    height: 100%;
+    font-size: 62.5%;
+}
+* {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    box-sizing: border-box;
+    font-weight: normal;
+    font-size: 1.4rem;
+}
+li {
+    list-style: none;
+}
+a:link,
+a:visited,
+a:hover,
+a:active,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    outline: none;
+}
+
+input,
+button,
+select,
+option {
+    background-clip: padding-box;
+    border: none;
+    background: none;
+}
+
+input:focus,
+textarea:focus,
+select:focus,
+button:active {
+    outline: none;
+    border: none;
+}
+p {
+    margin: 1rem 0;
+    font-size: 1.6rem;
+}
