--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,8 +1,7 @@
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen', 'Ubuntu',
+        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -21,7 +20,7 @@ html {
     position: relative;
     box-sizing: border-box;
     font-weight: normal;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 li {
     list-style: none;
@@ -48,11 +47,11 @@ option {
 input:focus,
 textarea:focus,
 select:focus,
-button:active {
+button:active,
+button:focus {
     outline: none;
     border: none;
 }
 p {
     margin: 1rem 0;
-    font-size: 1.6rem;
 }
