--- a/client/src/components/layout/Profile/Settings/Settings.scss
+++ b/client/src/components/layout/Profile/Settings/Settings.scss
@@ -2,3 +2,8 @@
 .settings {
     padding: 10rem 0;
 }
+.delete-account label {
+    color: $COLOR_DANGER;
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+}
