--- a/client/src/components/layout/Profile/Settings/Settings.scss
+++ b/client/src/components/layout/Profile/Settings/Settings.scss
@@ -1,6 +1,10 @@
 @import '../../../../App.scss';
 .settings {
     padding: 10rem 0;
+    section {
+        padding: 2rem 0 2rem;
+        border-bottom: solid 0.1rem $COLOR_BG;
+    }
 }
 .delete-account label {
     color: $COLOR_DANGER;
