--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -100,10 +100,10 @@ a:focus {
 //  ALERTS STYLING
 //====================
 .alert {
-    padding: 2.5rem;
+    padding: 3rem 2rem 2.5rem;
     text-align: center;
     font-size: 1.6rem;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 98vw;
@@ -123,6 +123,19 @@ a:focus {
 .alert--success {
     background: $COLOR_SUCCESS;
     color: seashell;
+}
+.alert__close {
+    position: absolute;
+    font-size: 2.4rem;
+    line-height: 0;
+    padding: 2rem;
+    font-weight: bold;
+    right: 0;
+    top: 0;
+    opacity: 0.7;
+}
+.alert__close:focus {
+    border: dashed 0.1rem #fff;
 }
 //====================
 //  FORM STYLING
