--- a/client/src/components/layout/Profile/Nav/Nav.scss
+++ b/client/src/components/layout/Profile/Nav/Nav.scss
@@ -17,6 +17,7 @@
         padding: 3rem 1.5rem;
         color: seashell;
         border: solid 0.1rem $COLOR_DARK;
+        font-size: 1.4rem;
     }
     .btn--is-active:hover,
     .btn--is-active {
