--- a/client/src/components/layout/Login/Login.scss
+++ b/client/src/components/layout/Login/Login.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding: 7rem 0;
 }
 .login__form {
     color: $COLOR_DARK;
