--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -87,7 +87,7 @@ $COLOR_GREY: #ebedef;
 //====================
 a:link,
 a:visited {
-    // color: $COLOR_THEME;
+    color: $COLOR_THEME;
 }
 a:hover,
 a:active {
