--- a/client/src/components/layout/Profile/Dashboard/Dashboard.scss
+++ b/client/src/components/layout/Profile/Dashboard/Dashboard.scss
@@ -8,7 +8,7 @@
     background-color: $COLOR_BG;
 }
 .dashboard__init-form {
-    padding: 4rem 0;
+    padding: 2rem 0 4rem;
 }
 .dashboard__profiled {
     display: grid;
