--- a/client/src/components/layout/Profile/Dashboard/Profile/Profile.scss
+++ b/client/src/components/layout/Profile/Dashboard/Profile/Profile.scss
@@ -1,1 +1,17 @@
 @import '../../../../../App.scss';
+.profile-details {
+    text-align: left;
+    font-size: 1.4rem;
+    margin-top: 4rem;
+    b {
+        font-weight: bold;
+    }
+    th {
+        padding-right: 3rem;
+        padding-bottom: 0.7rem;
+    }
+
+    span {
+        display: block;
+    }
+}
