Profile component completed

--- a/client/src/components/layout/Profile/Dashboard/Dashboard.scss
+++ b/client/src/components/layout/Profile/Dashboard/Dashboard.scss
@@ -5,7 +5,7 @@
     background-color: $COLOR_BG;
 }
 .section__body {
-    padding: 7rem;
+    padding: 3rem 7rem;
     background-color: #fff;
 }
 .dashboard__init {
