--- a/client/src/components/layout/Profile/Dashboard/Profile/Profile.scss
+++ b/client/src/components/layout/Profile/Dashboard/Profile/Profile.scss
@@ -5,6 +5,7 @@
 .profile-details {
     text-align: left;
     font-size: 1.4rem;
+    padding: 4rem 0;
     li {
         display: grid;
         grid-template-columns: 15rem 1fr;
@@ -13,8 +14,10 @@
 }
 .profile-details__address {
     white-space: pre-line;
-    padding-top: 3rem;
+    display: block;
+    margin: 3rem 0 0;
 }
 .profile-details__bank {
-    padding-top: 3rem;
+    display: block;
+    margin: 3rem 0 0;
 }
