--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -221,6 +221,55 @@ fieldset {
 .txtarea--md {
     width: 55rem;
 }
+.input-checkbox {
+    margin-top: 2rem;
+    label {
+        padding-left: 4rem;
+        margin: 0;
+        width: 50rem;
+    }
+    input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        width: 3rem;
+        height: 3rem;
+        opacity: 0;
+    }
+}
+.input-checkbox__checkmark {
+    position: absolute;
+    top: 0.5rem;
+    left: 0;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: #eee;
+    z-index: 2;
+}
+.input-checkbox__checkmark:after {
+    content: '\2713';
+    position: absolute;
+    display: none;
+    font-size: 2.4rem;
+    color: #fff;
+    font-weight: bold;
+    line-height: 2.2rem;
+    left: 0.2rem;
+}
+.input-checkbox:hover .input-checkbox__checkmark {
+    background-color: #ccc;
+}
+
+.input-checkbox input:checked ~ .input-checkbox__checkmark {
+    background-color: $COLOR_THEME;
+}
+.input-checkbox input:checked ~ .input-checkbox__checkmark:after {
+    display: block;
+}
+.input-checkbox input:focus ~ .input-checkbox__checkmark {
+}
+
 //====================
 //  BUTTONS STYLING
 //====================
