--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -152,7 +152,7 @@ a:focus {
     padding: 3rem 3rem 2rem;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    box-shadow: 0 0 0.7rem $COLOR_GREY;
+    box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
     border-radius: 1rem;
     //anim
     top: 30%;
@@ -413,6 +413,11 @@ fieldset {
     font-size: 2.5rem;
     font-weight: normal;
     margin: 2rem 0;
+}
+.heading--xs {
+    font-size: 1.5rem;
+    font-weight: bold;
+    opacity: 0.7;
 }
 p {
     margin: 1rem 0;
