--- a/client/src/components/layout/Profile/Dashboard/Companies/Company.scss
+++ b/client/src/components/layout/Profile/Dashboard/Companies/Company.scss
@@ -16,12 +16,16 @@
         }
     }
 }
+.company-nav__heading {
+    opacity: 0.7;
+    padding-top: 1rem;
+}
 .company-nav__link:active,
 .company-nav__link:link,
 .company-nav__link:visited {
     color: $COLOR_DARK;
     display: inline-block;
-    padding: 3.5rem 1.2rem 3.2rem;
+    padding: 3.9rem 1.2rem 2.9rem;
     font-size: 1.3rem;
     text-decoration: none;
 }
