--- a/client/src/layout/Dashboard/Dashboard.scss
+++ b/client/src/layout/Dashboard/Dashboard.scss
@@ -3,7 +3,9 @@
     display: grid;
     grid-template-columns: 18rem 1fr;
 }
-
+.dashboard__section {
+    padding: 5rem 15rem;
+}
 .dashboard-nav {
     min-height: 90vh;
     height: 100%;
@@ -99,8 +101,8 @@
     display: inline-block;
     padding: 2.5rem 1.5rem 2.5rem 1rem;
     font-size: 1.2rem;
-    color: #111;
-    opacity: 0.5;
+    color: $COLOR_DARK;
+    opacity: 0.6;
 }
 .submenu__link:link,
 .submenu__link:active,
