--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -479,3 +479,17 @@ p {
 .section__body {
     padding: 4rem 7rem;
 }
+.cover {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: grid;
+    align-content: center;
+}
+.cover--theme {
+    background: $COLOR_THEME;
+    opacity: 0.8;
+    padding-bottom: 7rem;
+}
