--- a/client/src/layout/Dashboard/Dashboard.scss
+++ b/client/src/layout/Dashboard/Dashboard.scss
@@ -84,8 +84,8 @@
 }
 .dashboard__icon {
     height: 1.6rem;
-    margin: 0 0.5rem;
-    top: 0.3rem;
+    margin-right: 0.4rem;
+    transform: translateY(0.3rem);
 }
 .submenu {
     display: grid;
@@ -105,7 +105,7 @@
 }
 .submenu__link {
     display: inline-block;
-    padding: 2.5rem 1.5rem 2.5rem 1rem;
+    padding: 2.5rem 1.1rem;
     font-size: 1.2rem;
     color: $COLOR_DARK;
     opacity: 0.6;
