--- a/client/src/layout/Login/Login.scss
+++ b/client/src/layout/Login/Login.scss
@@ -1,15 +1,26 @@
 @import '../../App.scss';
 .login {
-    background-color: $COLOR_BG;
+    // background-color: $COLOR_BG;
     display: grid;
+    grid-template-columns: 1fr 1fr;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 7rem 0 10rem;
+    .logo {
+        color: #fff;
+        transform: scale(1.5);
+    }
 }
 .login__form {
     color: $COLOR_DARK;
-    margin: 0 auto 5rem;
+    margin: 0 auto 4rem;
     width: 37rem;
+}
+.login__bg {
+    background-image: url('../../imgs/laptop.jpg');
+    // background-position: right top;
+    background-size: cover;
+    display: block;
+    min-height: 100vh;
 }
