--- a/client/src/layout/Register/Register.scss
+++ b/client/src/layout/Register/Register.scss
@@ -1,6 +1,6 @@
 @import './../../App.scss';
 .register {
-    background-color: $COLOR_BG;
+    // background-color: $COLOR_BG;
     display: grid;
     min-height: 100vh;
     align-items: center;
